src/tests/snapshots/gitu__tests__branch__delete_unmerged_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file         Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d -f bugfix-123                                                   |
Deleted branch bugfix-123 (was 33a8c4d).                                        |
styles_hash: 759341d48e2c00dc
