src/tests/snapshots/gitu__tests__branch__spinoff_branch_with_unmerged_commits.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch new                                                                  |
                                                                                |
 Recent commits                                                                 |
 c84f226 new add first commit                                                   |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new                                                           |
Switched to a new branch 'new'                                                  |
$ git update-ref -m "reset: moving to b66a0bf82020d6a386e94d0fceedec1f817d20c7" |
refs/heads/main b66a0bf82020d6a386e94d0fceedec1f817d20c7                        |
> Branch main was reset to b66a0bf82020d6a386e94d0fceedec1f817d20c7             |
styles_hash: f1c23e60f9d29904
