src/tests/snapshots/gitu__tests__branch__switch_branch_input.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌  main                                                                         |
▌* merged                                                                       |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout merged                                                           |
Switched to branch 'merged'                                                     |
styles_hash: f62456b7eae3080f
